--- a/Single-video/6758345622596585896435675754366574224679/01/index.html
+++ b/Single-video/6758345622596585896435675754366574224679/01/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8"> 
-<meta property="og:title" content="XHobmaster"> <meta property="og:description" content="'Don't tell on me, I'll do anything!' - Stepsister Kali Rose"> <meta property="og:image" content="https://drive.google.com/file/d/1M4BhzqicbOuXyKPLS6A9iZkx9X72sdmI"> 
+<meta property="og:title" content="XHobmaster"> <meta property="og:description" content="'Don't tell on me, I'll do anything!' - Stepsister Kali Rose"> <meta property="og:image" content="https://drive.google.com/uc?id=1M4BhzqicbOuXyKPLS6A9iZkx9X72sdmI"> 
  <meta http-equiv="X-UA-Compatible" content="IE=edge"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
  <title>'Don't tell on me, I'll do anything!' - Stepsister Kali Rose</title>
 <style>
