--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <title>Error</title>
   <link rel="stylesheet" href="./style.css">
+  <meta name="d960d7a8e1f68146a21433cb415fa6dac5fd7c1b" content="d960d7a8e1f68146a21433cb415fa6dac5fd7c1b" />
 </head>
 <style>
 body{
