--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@ h4{
 }
 </style>
 <body>
-  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-DQ850LQ73M"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-DQ850LQ73M'); </script>
+  <!-- Google tag (gtag.js) --> 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DQ850LQ73M"></script> 
+  <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', ':G-DQ850LQ73M'); </script>
 <!-- partial:index.partial.html -->
 <center><h4>This website is working</h4></center>
 <!-- partial -->
