--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Error</title>
   <link rel="stylesheet" href="./style.css">
   <meta name="d960d7a8e1f68146a21433cb415fa6dac5fd7c1b" content="d960d7a8e1f68146a21433cb415fa6dac5fd7c1b" />
+<meta name="exoclick-site-verification" content="168d1229b5a06dc418f978c3387ad6cb">
 </head>
 <style>
 body{
